(feat/CSS) Fixed body top margin and got rid of ugly gap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,8 @@
 body {
   /* space for navbar */
   padding-top : 125px;
-  background-image : url("../assets/bg-tile.jpg");
+  background-color: black;
+  /*background-image : url("../assets/bg-tile.jpg");*/
 }
 
 .eventImage {
